feat: Docker (8088) + frontend apuntado a 8088 + nuevas migraciones (V1,V3) + pantallas admin/almacenes