@@ -11,7 +11,14 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,42 +34,84 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/", "/index.html", "/files-html/**", "/files-css/**", "/files-js/**", "/img.logo/**").permitAll()
-                        .requestMatchers("/auth/**").permitAll()
+            .csrf(csrf -> csrf.disable())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                // estáticos
+                .requestMatchers("/", "/index.html", "/files-html/**", "/files-css/**", "/files-js/**", "/img.logo/**").permitAll()
+                // auth + health
+                .requestMatchers("/auth/**").permitAll()
+                .requestMatchers("/actuator/health").permitAll()
 
-                        // ⟵ habilitar reservas
-                        .requestMatchers("/stock-reservations/**").hasAnyRole("EMPLOYEE","OWNER")
-                        .requestMatchers("/reservations/**").hasAnyRole("EMPLOYEE","OWNER")
-                        .requestMatchers("/audits/**").hasAnyRole("EMPLOYEE","OWNER")
-                        .requestMatchers("/stock-movements/**").hasAnyRole("EMPLOYEE","OWNER")
+                // dominios del negocio
+                .requestMatchers("/stock-reservations/**").hasAnyRole("EMPLOYEE","OWNER")
+                .requestMatchers("/reservations/**").hasAnyRole("EMPLOYEE","OWNER")
+                .requestMatchers("/audits/**").hasAnyRole("EMPLOYEE","OWNER")
+                .requestMatchers("/stock-movements/**").hasAnyRole("EMPLOYEE","OWNER")
 
-
-                        .anyRequest().authenticated()
-                )
-                .addFilterBefore(new JwtAuthorizationFilter(jwtUtil),
-                        org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class);
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(new JwtAuthorizationFilter(jwtUtil),
+                org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5500", "http://127.0.0.1:5500"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        config.setAllowCredentials(true);
-        // Exponer headers si más adelante devolvés info útil (p.ej. pagination)
-        config.setExposedHeaders(List.of("Location", "X-Total-Count"));
-
+        CorsConfiguration cfg = new CorsConfiguration();
+        // Para desarrollo: permite http://localhost:* y http://127.0.0.1:*
+        cfg.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "http://127.0.0.1:*"
+        ));
+        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS","PATCH"));
+        cfg.setAllowedHeaders(List.of("Authorization","Content-Type","Accept"));
+        cfg.setExposedHeaders(List.of("Location","X-Total-Count"));
+        cfg.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", cfg);
         return source;
     }
-}
 
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public UserDetailsService userDetailsService(com.appTest.store.repositories.IUserRepository repo) {
+        return username -> {
+            var u = repo.findByUsername(username)
+                    .orElseThrow(() -> new org.springframework.security.core.userdetails.UsernameNotFoundException("User not found"));
+
+            // u.getRole() es tu enum ROLE_OWNER / ROLE_EMPLOYEE
+            String role = u.getRole().name();                 // "ROLE_OWNER"
+            String shortRole = role.startsWith("ROLE_") ? role.substring(5) : role; // "OWNER"
+
+            return org.springframework.security.core.userdetails.User
+                    .withUsername(u.getUsername())
+                    .password(u.getPassword())               // hash existente (BCrypt para admin)
+                    .roles(shortRole)                        // Spring antepone ROLE_
+                    .disabled(!u.isEnabled())
+                    .build();
+        };
+    }
+
+
+    @Bean
+    public DaoAuthenticationProvider authProvider(UserDetailsService uds, PasswordEncoder pe) {
+        DaoAuthenticationProvider p = new DaoAuthenticationProvider();
+        p.setUserDetailsService(uds);
+        p.setPasswordEncoder(pe);
+        return p;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+
+}
